@@ -5,13 +5,13 @@
 #include "../../core/replaygainplugin.h"
 
 #include <KUrl>
-
 #include <QWeakPointer>
 
 class ConversionOptions;
 class KDialog;
 class QComboBox;
 class QCheckBox;
+class QDoubleSpinBox;
 
 
 class AacGainPluginItem : public ReplayGainPluginItem
@@ -51,9 +51,11 @@ private:
     QWeakPointer<KDialog> configDialog;
     QComboBox *configDialogTagModeComboBox;
     QCheckBox *configDialogModifyAudioStreamCheckBox;
+    QDoubleSpinBox *configDialogGainAdjustmentSpinBox;
 
     int tagMode;
     bool modifyAudioStream;
+    double gainAdjustment;
 
 private slots:
     /** The undo process has exited */
