@@ -1,5 +1,6 @@
 2.1.2:
 -Add: Detect (DRM)-encrypted wma and m4a files
+-Add: Adjust gain for mp3 files
 
 2.1.1:
 -Add: Check for MP4 support in faac
